--- a/src/index.css
+++ b/src/index.css
@@ -129,7 +129,7 @@ img {
 
 .panel-wrapper__panel--image-background {
   background: var(--FCOLOR-LIGHT);
-  background-image: url('./img/background3.jpg');
+  background-image: url('./images/background3.jpg');
   background-size:cover;
   background-position: center;
 
@@ -363,9 +363,9 @@ img {
   grid-area: minor-content;
 }
 
-/* customer page  */
+/* user page  */
 
-.customerPage {
+.UserPage {
   display: grid;
   grid-template-areas: 
   "sidebar page-content";
@@ -409,13 +409,13 @@ img {
   margin-top: 0.2rem;
 }
 
-/* customerPage - borrows */
+/* UserPage - borrows */
 
 .borrows {
   grid-area: page-content;
 }
 
-/* customerPage - details */
+/* UserPage - details */
 
 .details {
   grid-area: page-content;
@@ -487,7 +487,7 @@ img {
 .details__image {
   grid-area: image;
   
-  background-image: url('./img/details5.jpg');
+  background-image: url('./images/details5.jpg');
   background-size: cover;
   background-position:center;
 }
@@ -498,7 +498,7 @@ img {
   background-color: rgba(255, 255, 255, 0.384);
 }
 
-/* customer page - settings */
+/* user page - settings */
 
 .settings {
   grid-area: page-content;
@@ -563,7 +563,7 @@ img {
 .settings__image {
   grid-area: image;
 
-  background-image: url('./img/details3.jpg');
+  background-image: url('./images/details3.jpg');
   background-size: cover;
   background-position:center;
 }
