--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -38,28 +38,49 @@ img {
 
 /* UNIVERSAL STYLE */
 
-/* body {
-  margin: 0;
-  height: 100vh;
-} */
+ body {
+  overflow-x: hidden;
+} 
 
-.App {
+
+.app {
   font-family: var(--FF);
   color: var(--FCOLOR-DARK);
-  min-width: 100vw;
-  height: 100vh;
+  width: 100vw;
+  height: 100%;
+  min-height: 100vh;
 
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 5fr;
-  row-gap:0;
+  display: flex;
+  justify-content: center;
 
   position: relative;
+  overflow: clip;
+
 }
 
-/* main {
-  min-width: 0;
-} */
+.app__background {
+  height: 100%;
+  min-height: 100vh;
+
+  display: flex;
+  justify-content: center;
+
+  background: rgba(0, 0, 0, 0.055);
+
+}
+
+.app__page-container {
+  width: 100%;
+  min-height: 100vh;
+
+  display: grid;
+  grid-template-columns: minmax(0, 1fr);
+  grid-template-rows: 90px 1fr;
+  row-gap:0;
+  
+  background: rgb(255, 255, 255);
+
+}
 
 
 /* for buttons */
@@ -263,6 +284,10 @@ img {
 .book-list__container {
   max-width: 100%;
   max-height: 100%;
+
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr;
 }
 
 .book-list__list {
@@ -311,6 +336,40 @@ img {
   gap: 0.7rem;
 }
 
+/* for pagination */
+
+.pagination {
+  padding: 1rem 0;
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+}
+
+
+
+.pagination__item {
+  margin: 0 0.2rem;
+}
+
+.pagination__link {
+  display: inline-block;
+  padding: 10px 18px;
+  color: #222;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  padding: 0;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.pagination__link--active {
+  background: rgb(252, 204, 212);
+  border: 1px solid var(--FCOLOR-LIGHT);
+  border-radius: 20px;
+}
+
 /* for icons */
 
 .icon {
@@ -324,19 +383,22 @@ img {
 
 /* header */
 .header {
+  height: 100%;
   border-bottom: 1px solid var(--BORDER-COLOR);
 
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-evenly;
+  align-items: center;
 }
 
 .header__title {
   color: var(--FCOLOR-LIGHT);
-  font-size: clamp(1rem, 5vw, 2.4rem);
+  font-size: clamp(1.2rem, 3.5vw, 2.8rem);
 }
 
 .header__navbar  {
+  width: 100vw;
   padding: 0.5rem;
   display: flex;
   justify-content: space-evenly;
@@ -357,13 +419,13 @@ img {
 /* homepage */
 .homepage {
   max-width: 100%;
-  max-height: 100%;
+  height: 100%;
   display: grid;
   grid-template-areas: 
   "filter title feedback"
   "filter books books";
   grid-template-columns: 0.25fr 0.5fr 0.5fr;
-  grid-template-rows: 0.2fr 1fr;
+  grid-template-rows: 1fr 6fr;
 }
 
 .homepage__title {
@@ -382,6 +444,8 @@ img {
 
 .homepage .filter {
   grid-area: filter;
+
+  
 }
 
 .homepage .book-list__container {
@@ -408,10 +472,7 @@ img {
 /* --search filter */
 
 .filter {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 0.2fr 1fr 1fr 0.3fr;
-  /* align-items: center; */
+  /* display: grid; */
   
   padding: 0.5rem;
   height: 100%;
@@ -423,12 +484,19 @@ img {
 }
 
 .filter__title {
-  padding-bottom: 0.3rem ;
+  padding: 0.75rem;
+}
+
+.filter__wrapper {
+  position: sticky;
+  top: 0;
+  left: 0;
+
 }
 
 .filter__types {
   border-top: 1px solid var(--BORDER-COLOR);
-  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 
   display: flex;
   flex-flow: column nowrap;
@@ -447,7 +515,8 @@ img {
 
 .filter__publishyear {
   border-top: 1px solid var(--BORDER-COLOR);
-  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+
   
   display: flex;
   flex-flow: column nowrap;
@@ -468,9 +537,9 @@ img {
 
 .filter__button-container {
   border-top: 1px solid var(--BORDER-COLOR);
+  padding-top: 0.5rem;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  gap: 0.5rem;
 }
 
 /* log in page */
@@ -901,4 +970,24 @@ img {
   padding-top: 0.7rem;
   padding-left: 1.5rem;
   font-size: 2rem;
+}
+
+/* SCREEN SIZE */
+
+@media screen and (min-width: 1280px) {
+  .app {
+    background: #89c2d9;
+    /* #61a5c2 */
+    /* #89c2d9 */
+
+  }
+
+  .app__page-container {
+    width: 75%;
+    background-color: white;
+    border-left: 1px solid rgb(255, 255, 255);
+    box-shadow: 0 0 28px 4px white;
+    border-right: 1px solid rgb(255, 255, 255);
+  }
+
 }
